[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alejandro Torres Aguilera", email = "darthata@gmail.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocs-material-extensions>=1.3",
    "mkdocstrings>=0.23.0",
    "mkdocs-same-dir>=0.1.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.1",
    "pre-commit>=3.5.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
